# project-template

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
ci/docker/: Dockerfile
migrations/: env.py
src/: main.py
src/adapters/api/: health.py
src/adapters/database/: base.py  session.py
src/config/: port.py
src/config/files/: local.yml
src/core/: config.py
