[tool.poetry]
name = "project-template"
version = "0.1.0"
description = "Template to quickly launch a new project."
authors = ["Sebastian Wdowiarz <wdowiarzsebastian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
isort = "^5.13.2"
pre-commit = "^4.1.0"
flake8 = "^7.1.1"
bandit = "^1.8.2"
pyupgrade = "^3.19.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py311']
